fixed button on small screen

--- a/src/styles/partials/general.scss
+++ b/src/styles/partials/general.scss
@@ -3,6 +3,16 @@
     height: 70px;
 }
 
+@media only screen and (max-width: 1024px) {
+    .generalBtn {
+        width: 180px;
+        height: 55px;
+    }
+
+    
+}
+
+
 
 @media only screen and (max-width: 768px) {
 
